# ros_vision

./: .gitignore  CALIBRATION_README.md  CLAUDE.md  DEVELOPER_README.md  Dockerfile  Dockerfile-Codespace  Dockerfile.arm64  EXTRINSICS_CALIBRATION_README.md  README.md  WSL_README.md  bootstrap.sh  build_env_vars.sh  create_bundle.sh  deploy_config.sh  docker_build_arm64.sh  install_deps.sh  install_service.bsh  optimized_launch.bsh  release.sh  ros_vision.service  run_tests.sh  start_vision.bsh  version_manager.sh
.devcontainer/: devcontainer.json
.github/workflows/: cmake-single-platform.yml  multi-arch-release.yml
launch/: launch_vision.py
src/.devcontainer/: devcontainer.json
src/apriltags_cuda/: CMakeLists.txt  package.xml
src/apriltags_cuda/include/apriltags_cuda/: AprilTagDataSender.h  AprilTagProtobufSender.h  DoubleArraySender.h  apriltag_gpu.h  apriltag_proto_traits.h  apriltags_cuda_detector.hpp  apriltags_detector.hpp  labeling_allegretti_2019_BKE.h  line_fit_filter.h  tag_detection_msg_helpers.hpp  threshold.h  video_processor.h
src/apriltags_cuda/msg/: TagDetectionArray.msg
src/apriltags_cuda/proto/: Apriltag.proto  apriltag.proto
src/apriltags_cuda/src/: AprilTagDataSender.cpp  AprilTagProtobufSender.cpp  BooleanValueSender.cpp  DoubleArraySender.cpp  DoubleValueSender.cpp  IntegerArraySender.cpp  IntegerValueSender.cpp  NetworkTablesUtil.cpp  NetworkTablesUtil.h  apriltag_detect.cu  apriltag_gpu.cu  apriltag_utils.cu  apriltags_cuda_detector.cu  apriltags_cuda_node.cu  apriltags_detector.cu  cameraexception.h  cuda_frc971.cu  gpu_detector_test.cu  labeling_allegretti_2019_BKE.cu  line_fit_filter.cu  opencv_cuda_demo.cu  points.cu  threshold.cu  visualize.cu
src/apriltags_cuda/test/: README_TRANSFORMATION_TESTS.md  apriltag_detector_transform_test.cu  apriltag_sender_test.cu  coordinate_transform_test.cu  detection_sorting_test.cu  gpu_detector_test.cu  test_apriltags_detector.py  test_image_publisher.py
src/bag_utils/: README.md  package.xml  setup.py
src/bag_utils/bag_utils/: __init__.py  extract_images.py
src/camera_calibration/: package.xml  setup.py
src/camera_calibration/camera_calibration/: camera_calibrator.py  charuco_camera_calibrator.py  charuco_camera_calibrator2.py  checkerboard_camera_calibrator.py
src/checkerboard_camera_calibration/: package.xml  setup.cfg  setup.py
src/checkerboard_camera_calibration/checkerboard_camera_calibration/: checkerboard_camera_calibrator.py
src/extrinsic_calibration/: package.xml  requirements.txt  setup.cfg  setup.py
src/extrinsic_calibration/extrinsic_calibration/: cal_results.txt  data_collector.py  diagnose_extrinsics.py  rotating_platform_config.yaml  rotating_platform_config_766.yaml  solver.py  solver_config.yaml  solver_rotating_platform.py  utils.py
src/extrinsic_calibration/test/: test_solver.py  test_utils.py
src/game_piece_detection/: CMakeLists.txt  README.md  package.xml
src/game_piece_detection/include/game_piece_detection/: MockModelInference.h  ModelInference.h  detection_utils.h  yolo_detection.h
src/game_piece_detection/models/: .gitignore  README.md  download_models.sh  requirements.txt  run.sh  setup_env.sh
src/game_piece_detection/src/: detection_test.cpp  game_piece_detection_node.cu  inference_benchmark.cpp
src/game_piece_detection/test/: test_game_piece_detector.cpp
src/game_piece_detection/utils/: requirements.txt  run.sh  setup.cfg  setup.py  setup_env.sh
src/game_piece_detection/utils/detection_tools/: __init__.py  convert_to_onnx.py
src/launch/: launch_vision.py
src/ros_vision/: CMakeLists.txt  package.xml
src/ros_vision/launch/: launch_vision.py
src/ros_vision/src/apriltags_cuda/: CMakeLists.txt  package.xml
src/ros_vision/src/apriltags_cuda/src/: apriltags_cuda_node.cu  cuda_frc971.cu  opencv_cuda_demo.cu
src/ros_vision/src/piece_detection/: package.xml
src/ros_vision/src/piece_detection/src/: piece_detector_node.cpp
src/ros_vision/src/seasocks_viewer/: CMakeLists.txt
src/ros_vision/src/seasocks_viewer/src/: seasocks_viewer_node.cpp
src/ros_vision/src/usb_camera/: CMakeLists.txt  package.xml
src/ros_vision/src/usb_camera/src/: image_processor_node.cpp  usb_camera_node.cpp
src/ros_vision/src/vision_utils/: CMakeLists.txt
src/ros_vision_launch/: CMakeLists.txt  package.xml  setup.py
src/ros_vision_launch/launch/: calibrate_camera.launch.py  charuco_calibrate.launch.py  checkerboard_calibrate.launch.py  extrinsic_calibration.launch.py  launch_vision.py
src/ros_vision_launch/ros_vision_launch/: utils.py
src/seasocks_viewer/: CMakeLists.txt  package.xml
src/seasocks_viewer/src/: index.html  seasocks_viewer_node.cpp
src/usb_camera/: CMakeLists.txt  package.xml
src/usb_camera/include/usb_camera/: camera_interface.hpp  camera_publisher.hpp  opencv_camera.hpp
src/usb_camera/src/: camera_publisher.cpp  image_processor_node.cpp  opencv_camera.cpp  usb_camera_node.cpp
src/usb_camera/test/: mock_camera.cpp  mock_camera.hpp  test_camera_publisher.cpp
src/vision_config_data/: CMakeLists.txt  package.xml
src/vision_config_data/data/: system_config.json
src/vision_config_data/data/calibration/: calibrationmatrix_12.json  calibrationmatrix_199.json  calibrationmatrix_766.json  calibrationmatrix_HVCAM01.json  calibrationmatrix_HVCAM02.json  calibrationmatrix_HVCAM04.json  calibrationmatrix_UC762.json  calibrationmatrix_cam11.json  calibrationmatrix_cam12.json
src/vision_utils/: CMakeLists.txt  ROTATION_UTILS_README.md  package.xml  timing_report.py
src/vision_utils/example_usage/: CMakeLists.txt
src/vision_utils/example_usage/src/: main.cpp
src/vision_utils/include/vision_utils/: camera_utils.hpp  config_loader.hpp  process_scheduler.hpp  publisher_queue.hpp  rotation_utils.hpp
src/vision_utils/src/: camera_utils.cpp  config_loader.cpp  process_scheduler.cpp  rotation_demo.cpp  rotation_utils.cpp
src/vision_utils/test/: README.md  test_config_loader.cpp  test_config_loader_utilities.cpp  test_rotation_utils.cpp
