<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_utils</name>
  <version>0.0.0</version>
  <description>Vision utility functions including configuration loading and 3D rotation mathematics using OpenCV</description>
  <maintainer email="cgpadwick@gmail.com">cpadwick</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>vision_deps</depend>
  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>pandas</exec_depend>
  <exec_depend>matplotlib</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- timing_report.py and requirements.txt are installed to share/${PROJECT_NAME} -->
  </export>
</package>
