[metadata]
name = detection_tools
version = 0.1.0
description = Utilities for YOLO model conversion and detection tasks
author = cpadwick
author_email = cgpadwick@gmail.com

[options]
packages = find:
python_requires = >=3.8
install_requires =
    ultralytics>=8.0.0
    onnx
    onnxsim
    numpy<2

[options.entry_points]
console_scripts =
    convert_to_onnx = detection_tools.convert_to_onnx:main
